hphp/hack/test/typecheck/anon_scope_bug.php.exp
File "anon_scope_bug.php", line 6, characters 5-6:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
